--- a/package.json
+++ b/package.json
@@ -12,14 +12,14 @@
     "baseline-browser-mapping": "^2.8.32",
     "firebase": "^12.6.0",
     "lucide-react": "^0.555.0",
-    "next": "16.0.1",
+    "next": "^16.0.10",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "eslint": "^9",
-    "eslint-config-next": "16.0.1",
+    "eslint-config-next": "^16.0.10",
     "tailwindcss": "^4"
   }
 }
